# smart_tv_scheduler

./: README.md  config.py  enums.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: system_tasks.json  user_tasks.json
models/: task.py
services/: api.py  functions.py  scheduler.py  task_manager.py
tests/: conftest.py  test_scheduler.py  test_task_manager.py
